--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "essential-blog",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.9.0",
-    "@mdx-js/loader": "^3.0.0",
-    "@mdx-js/react": "^3.0.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^14.0.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.4",
+    "@types/webpack-env": "^1.18.1",
+    "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.0.0",
     "fast-glob": "^3.3.2",
+    "feed": "^4.2.2",
     "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "remark-gfm": "^4.0.0"
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
